--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="card">
     <img src="https://via.placeholder.com/150" alt="Profile Picture" class="profile-img">
-    <h2>Jane Doe</h2>
+    <h1>Megha Umale</h1>
     <p>Web Developer</p>
     <div class="socials">
       <a href="#">🌐</a>
